# arrow-datafusion

./: .asf.yaml  CONTRIBUTING.md  Cargo.toml
ballista/rust/client/src/: context.rs
ballista/rust/core/: Cargo.toml
ballista/rust/executor/: Cargo.toml
benchmarks/: Cargo.toml
data-access/: Cargo.toml
data-access/src/object_store/: local.rs  mod.rs
datafusion/: Cargo.toml
datafusion-cli/: Cargo.toml
datafusion-common/: Cargo.toml
datafusion-examples/: Cargo.toml
datafusion-expr/: Cargo.toml
datafusion-scheduler/: Cargo.toml
datafusion-scheduler/benches/: parquet_query_sql.rs
datafusion-scheduler/src/: lib.rs  node.rs  query.rs  repartition.rs  worker.rs
datafusion/benches/: parquet_query_sql.rs
datafusion/common/: Cargo.toml
datafusion/common/src/: lib.rs  pyarrow.rs  scalar.rs
datafusion/core/: Cargo.toml
datafusion/core/benches/: parquet_query_sql.rs
datafusion/core/fuzz-utils/: Cargo.toml
datafusion/core/src/: lib.rs
datafusion/core/src/catalog/: schema.rs
datafusion/core/src/datasource/: local.rs  mod.rs  object_store_registry.rs
datafusion/core/src/execution/: context.rs  runtime_env.rs
datafusion/core/src/logical_plan/: builder.rs
datafusion/core/src/physical_optimizer/: repartition.rs
datafusion/core/src/physical_plan/: coalesce_partitions.rs  filter.rs  hash_utils.rs  (+4 more)
datafusion/core/tests/: path_partition.rs  row.rs  temp.rs
datafusion/expr/: Cargo.toml
datafusion/jit/: Cargo.toml
datafusion/optimizer/: Cargo.toml
datafusion/physical-expr/: Cargo.toml
datafusion/proto/: Cargo.toml
datafusion/row/: Cargo.toml
datafusion/scheduler/: Cargo.toml
datafusion/scheduler/src/: lib.rs  plan.rs  query.rs  task.rs
datafusion/sql/: Cargo.toml
datafusion/src/datasource/: memory.rs
datafusion/src/physical_plan/: hash_aggregate.rs
datafusion/src/test/: object_store.rs
(+46 files in other folders)
